[gd_scene load_steps=49 format=2]

[ext_resource path="res://assets/textures/npc/wisp/blue/spritesheet.png" type="Texture" id=1]
[ext_resource path="res://assets/textures/npc/wisp/purple/spritesheet.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/npc/wisp/red/spritesheet.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/npc/wisp/yellow/spritesheet.png" type="Texture" id=4]
[ext_resource path="res://assets/scripts/npc/Wisp.gd" type="Script" id=5]
[ext_resource path="res://assets/scenes/misc/HealthDisplay.tscn" type="PackedScene" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 42, 42, 42 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 42, 42, 42, 42 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 84, 42, 42, 42 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 126, 42, 42, 42 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 84, 42, 42 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 42, 84, 42, 42 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 84, 84, 42, 42 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 126, 84, 42, 42 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 42, 42, 42 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 42, 42, 42, 42 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 84, 42, 42, 42 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 126, 42, 42, 42 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 0, 84, 42, 42 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 42, 84, 42, 42 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 84, 84, 42, 42 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 126, 84, 42, 42 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 0, 42, 42, 42 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 42, 42, 42, 42 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 84, 42, 42, 42 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 126, 42, 42, 42 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 0, 84, 42, 42 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 42, 84, 42, 42 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 84, 84, 42, 42 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 126, 84, 42, 42 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 0, 42, 42, 42 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 42, 42, 42, 42 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 84, 42, 42, 42 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 126, 42, 42, 42 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 0, 84, 42, 42 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 42, 84, 42, 42 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 84, 84, 42, 42 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 126, 84, 42, 42 )

[sub_resource type="SpriteFrames" id=33]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "blue",
"speed": 10.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "red",
"speed": 10.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "yellow",
"speed": 10.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "purple",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=34]

[sub_resource type="Animation" id=35]
resource_name = "circle"
tracks/0/type = "value"
tracks/0/path = NodePath("Paths/Circle/PathFollow2D:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "purple" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimationPlayer:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.2 ]
}

[sub_resource type="Animation" id=36]
resource_name = "horizontal"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Paths/Horizontal/PathFollow2D:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "red" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimationPlayer:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.4 ]
}

[sub_resource type="Animation" id=37]
resource_name = "vertical"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Paths/Vertical/PathFollow2D:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "yellow" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer:playback_speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}

[sub_resource type="Animation" id=38]
resource_name = "zigzag"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Paths/Zigzag/PathFollow2D:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "blue" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimationPlayer:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.6 ]
}

[sub_resource type="Curve2D" id=39]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 192, 0 )
}

[sub_resource type="Curve2D" id=40]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -192 )
}

[sub_resource type="Curve2D" id=41]
_data = {
"points": PoolVector2Array( 0, 0.176777, 0, -0.176777, 0, 0, 0, 0, 0, 0, 8, -48, 0, 0, 0, 0, 24, -72, 0, 0, 0, 0, 48, -88, 0, 0, 0, 0, 96, -96, 0, 0, 0, 0, 144, -88, 0, 0, 0, 0, 168, -72, 0, 0, 0, 0, 184, -48, 0, 0, 0, 0, 192, 0, 0, 0, 0, 0, 184, 48, 0, 0, 0, 0, 168, 72, 0, 0, 0, 0, 144, 88, 0, 0, 0, 0, 96, 96, 0, 0, 0, 0, 48, 88, 0, 0, 0, 0, 24, 72, 0, 0, 0, 0, 8, 48, 0, 0, 0, 0, 0, 0 )
}

[sub_resource type="Curve2D" id=42]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, -64, 0, 0, 0, 0, 128, 64, 0, 0, 0, 0, 192, 0 )
}

[node name="Wisp" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 33 )
animation = "blue"
frame = 7
playing = true
__meta__ = {
"_edit_group_": true
}

[node name="HealthDisplay" parent="AnimatedSprite" instance=ExtResource( 6 )]
position = Vector2( -8, -21 )
scale = Vector2( 0.1, 0.1 )

[node name="Area2D" type="Area2D" parent="AnimatedSprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/Area2D"]
shape = SubResource( 34 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
playback_speed = 0.6
anims/circle = SubResource( 35 )
anims/horizontal = SubResource( 36 )
anims/vertical = SubResource( 37 )
anims/zigzag = SubResource( 38 )

[node name="Paths" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="Horizontal" type="Path2D" parent="Paths"]
curve = SubResource( 39 )

[node name="PathFollow2D" type="PathFollow2D" parent="Paths/Horizontal"]
rotate = false
loop = false

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Paths/Horizontal/PathFollow2D"]
remote_path = NodePath("../../../../AnimatedSprite")

[node name="Vertical" type="Path2D" parent="Paths"]
curve = SubResource( 40 )

[node name="PathFollow2D" type="PathFollow2D" parent="Paths/Vertical"]
rotate = false
loop = false

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Paths/Vertical/PathFollow2D"]
remote_path = NodePath("../../../../AnimatedSprite")

[node name="Circle" type="Path2D" parent="Paths"]
curve = SubResource( 41 )

[node name="PathFollow2D" type="PathFollow2D" parent="Paths/Circle"]
rotate = false
loop = false

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Paths/Circle/PathFollow2D"]
remote_path = NodePath("../../../../AnimatedSprite")

[node name="Zigzag" type="Path2D" parent="Paths"]
curve = SubResource( 42 )

[node name="PathFollow2D" type="PathFollow2D" parent="Paths/Zigzag"]
rotate = false
loop = false

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Paths/Zigzag/PathFollow2D"]
remote_path = NodePath("../../../../AnimatedSprite")
[connection signal="area_entered" from="AnimatedSprite/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
